<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Android Tutorial</string>
    <string name="dibuka">Dibuka</string>
    <string name="ditutup">Ditutup</string>
    <string name="dashboard">Dasbor</string>
    <string name="lesson_1">1. TwoActivity 1</string>
    <string name="lesson_2">2. KeyboardSample</string>
    <string name="lesson_3">3. PhoneNumberSpinner</string>
    <string name="lesson_4">4. AlertSample</string>
    <string name="lesson_5">5. DateTimePicker</string>
    <string name="lesson_6">6. DroidCafe</string>
    <string name="lesson_7">7. TabLateral</string>
    <string name="lesson_8">8. RecyclerView</string>
    <string name="lesson_9">9. MaterialMe</string>
    <string name="lesson_10">10. AsyncTask</string>
    <string name="lesson_11">11. WhoWriteApp</string>
    <string name="lesson_12">12. NotifyMe</string>
    <string name="lesson_13">13. HelloSharedPref</string>
    <string name="lesson_14">14. WordListSql</string>
    <string name="about_us">Tentang Kami</string>
    <string name="materi1">1.1 Memasang Android Studio.pdf</string>
    <string name="materi2">1.2 Menggunakan Layout.pdf</string>
    <string name="materi3">1.3 Menggunakan Elemen Teks.pdf</string>
    <string name="materi4">2.1 Membuat dan Memulai Aktivitas.pdf</string>
    <string name="materi5">4.1 Menggunakan Keyboard, Kontrol Masukan, Peringatan dan Picker.pdf</string>
    <string name="materi6">4.2 Menggunakan Menu Opsi.pdf</string>
    <string name="materi7">4.3 Menggunakan Bilah Aplikasi Dan Tab Navigasi.pdf</string>
    <string name="materi8">4.4 Membuat Recycler View.pdf</string>
    <string name="materi9">5.2 Desain Material.pdf</string>
    <string name="materi10">5.3 Mendukung Landscape.pdf</string>
    <string name="materi11">6.1 Menggunakan Espresso Untuk Menguji UI Anda.pdf</string>
    <string name="materi12">7.1 Membuat Async Task.pdf</string>
    <string name="materi13">8.1 Notifikasi.pdf</string>
    <string name="materi14">9.1 Shared Preference.pdf</string>
    <string name="materi15">11.1 B Menambahkan Penyedia Konten ke Database Anda.pdf</string>
    <string name="materi16">GoogleMaps.pdf</string>
    <string name="materi17">Proximity and Gyroscope.pdf</string>
    <string name="judul1">Android Studio dan Hello World</string>
    <string name="judul2">UI Interaktif</string>
    <string name="judul3">Layout</string>
    <string name="judul4">Aktivitas</string>
    <string name="judul5">Keyboard, Kontrol Masukan, Peringatan dan Picker</string>
    <string name="judul6">Menu Opsi dan Tombol Radio</string>
    <string name="judul7">Bilah Aplikasi dan Tab Untuk Navigasi</string>
    <string name="judul8">Recycler View</string>
    <string name="judul9">Desain Material: Daftar, Kartu dan Warna</string>
    <string name="judul10">Landscape, Beberapa Ukuran Layar, dan Pelokalan</string>
    <string name="judul11">Espresso untuk Uji UI</string>
    <string name="judul12">Membuat Async Task</string>
    <string name="judul13">Notifikasi</string>
    <string name="judul14">SharedPreference</string>
    <string name="judul15">Penyedia Materi ke Databas</string>
    <string name="judul16">Map maping</string>
    <string name="judul17">Proximity dan Gyroscope</string>
    <string-array name="judul_demo1">
        <item>HelloWorld</item>
    </string-array>
    <string-array name="judul_demo2"></string-array>
    <string-array name="judul_demo3"></string-array>
    <string-array name="judul_demo4"></string-array>
    <string-array name="judul_demo5">
        <item>KeyboardSamples</item>
        <item>PhoneNumberSpinner</item>
        <item>DateTimePicker</item>
        <item>AlertSample</item>
    </string-array>
    <string-array name="judul_demo6">
        <item>DroidCafe</item>
    </string-array>
    <string-array name="judul_demo7">
        <item>TabLateral</item>
    </string-array>
    <string-array name="judul_demo8">
        <item>Recycler</item>
    </string-array>
    <string-array name="judul_demo9">
        <item>MaterialMe</item>
    </string-array>
    <string-array name="judul_demo10"></string-array>
    <string-array name="judul_demo11"></string-array>
    <string-array name="judul_demo12">
        <item>AsyncTask</item>
    </string-array>
    <string-array name="judul_demo13">
        <item>NotifyMe</item>
    </string-array>
    <string-array name="judul_demo14">
        <item>HelloSharedPrefs</item>
    </string-array>
    <string-array name="judul_demo15">
        <item>WordListSql</item>
    </string-array>
    <string-array name="judul_demo16">
        
        
        
    </string-array>
    <string-array name="judul_demo17">
        <item>GyroscopeSensor</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rate_us">Nilai Kami</string>
    <string name="version">Versi</string>
    <string name="github_source_code">Github Source Code</string>
    <string name="title">Title</string>
    <string name="show">Show</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="phonenumber">phonenumber</string>
    <string name="instructions">Enter a full or partial book name or text from the book. Click Search Books to find out who wrote the book. </string>
    <string name="button_text">Search Books</string>
    <string name="input_hint">Book Title</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="no_results">No Results Found</string>
    <string name="tap_test">Tap to test the alert:</string>
    <string name="alert_button">Alert</string>
    <string name="alert_message">Click OK to continue, or Cancel to stop:</string>
    <string name="alert_title">Alert</string>
    <string name="pressed_ok">Pressed OK</string>
    <string name="pressed_cancel">Pressed Cancel</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_placeholder">Title</string>
    <string name="news_label">News</string>
    <string name="sports_info_placeholder">Here is some news</string>
    <string name="sports_image">Sports Image</string>
    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas
        vitae semper quam. In a metus ut nisl pharetra hendrerit et a leo. Curabitur nec sapien
        odio. Vestibulum a mollis felis. Cras molestie felis nibh, ut maximus mauris feugiat
        tincidunt. Curabitur ultricies eros sed ipsum pulvinar vehicula. Maecenas volutpat,
1        massa sit amet aliquam eleifend, massa lorem tempor sapien, eget finibus massa dolor
        molestie lorem. Suspendisse at purus mauris. Proin nibh ligula, suscipit vel pharetra
        posuere, bibendum id lorem.</string>
    <string-array name="sports_titles">
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Basketball</item>
        <item>Bowling</item>
        <item>Cycling</item>
        <item>Golf</item>
        <item>Running</item>
        <item>Soccer</item>
        <item>Swimming</item>
        <item>Table Tennis</item>
        <item>Tennis</item>
    </string-array>
    <string-array name="sports_info">
        <item>Here is some Baseball news!</item>
        <item>Here is some Badminton news!</item>
        <item>Here is some Basketball news!</item>
        <item>Here is some Bowling news!</item>
        <item>Here is some Cycling news!</item>
        <item>Here is some Golf news!</item>
        <item>Here is some Running news!</item>
        <item>Here is some Soccer news!</item>
        <item>Here is some Swimming news!</item>
        <item>Here is some Table Tennis news!</item>
        <item>Here is some Tennis news!</item>
    </string-array>
    <string name="hello_blank_fragment2">Hello blank fragment</string>
    <string name="tab_1">These are the top stories</string>
    <string name="tab_2">Chat</string>
    <string name="tab_3">Status</string>
    <string name="tab_label1">Top Stories</string>
    <string name="tab_label2">Tech News</string>
    <string name="tab_label3">Cooking</string>
    <string name="ready_to_start">I am ready to start work!</string>
    <string name="start_task">Start Task</string>
    <string name="napping">"Napping…"</string>
    <string name="notification_title">You\'ve been notified!</string>
    <string name="notification_text">This is your notification text.</string>
    <string name="learn_more">Learn More</string>
    <string name="update">Update</string>
    <string name="notify_me">Notify Me!</string>
    <string name="update_me">Update Me!</string>
    <string name="cancel_me">Cancel Me!</string>
    <string name="notification_updated">Notification Updated!</string>
    <string name="choose_datetime">Choose the date and time:</string>
    <string name="date_button">Date</string>
    <string name="time_button">Time</string>
    <string name="date_picker">datePicker</string>
    <string name="time_picker">timePicker</string>
    <string name="date">"Date: "</string>
    <string name="time">"Time: "</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="choose_a_dessert">Choose a dessert.</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have
        chocolate wafers and vanilla filling</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="chosen">"Chosen: "</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="develop">Developed by Alfian Agra Merry</string>
    <string name="versio">Versio</string>
    <string name="logo">Logo</string>
    <string name="githubnya">Github :</string>
    <string name="alfian">Alfian Hadi Pratama</string>
    <string name="user_alfian">alfianhpratama</string>
    <string name="agra">Agra</string>
    <string name="user_agra">agra8</string>
    <string name="merry">Merry Marsita</string>
    <string name="user_merry">merrymarst</string>
    <string name="phonenumber_label">"Phone Number: "</string>
    <string name="show_button">Show</string>
    <string name="nothing_entered">Nothing entered.</string>
    <string name="aam">Alfian Agra Merry</string>
    <string name="memulai">Memulai</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="interaksi_pengguna">Interaksi Pengguna</string>
    <string name="pengalaman_pengguna">Pengalaman Pengguna</string>
    <string name="uji_aplikasi">Uji Aplikasi</string>
    <string name="tugas_layar_belakang">Tugas Layar Belakang</string>
    <string name="memicu_menjadwalkan_dan_mengoptimalkan_tugas_latar_belakang">Memicu, menjadwalkan, dan Mengoptimalkan Tugas Latar Belakang</string>
    <string name="preferensi_dan_setelan">Preferensi dan Setelan</string>
    <string name="berbagi_data">Berbagi data</string>
    <string name="sensor">Sensor</string>
    <string name="about_as">Info</string>
</resources>