<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_page"
            android:icon="@drawable/ic_home"
            android:title="@string/dashboard" />
        <item android:title="@string/memulai">
            <menu>
                <item
                    android:id="@+id/pelajaran11"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul1" />
                <item
                    android:id="@+id/pelajaran12"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul2" />
                <item
                    android:id="@+id/pelajaran13"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul3" />
            </menu>
        </item>
        <item android:title="@string/aktivitas">
            <menu>
                <item
                    android:id="@+id/pelajaran21"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul4" />
            </menu>
        </item>

        <item android:title="@string/interaksi_pengguna">
            <menu>
                <item
                    android:id="@+id/pelajaran41"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul5" />
                <item
                    android:id="@+id/pelajaran42"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul6" />
                <item
                    android:id="@+id/pelajaran43"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul7" />
                <item
                    android:id="@+id/pelajaran44"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul8" />
            </menu>
        </item>
        <item android:title="@string/pengalaman_pengguna">
            <menu>
                <!--<item
                    android:id="@+id/pelajaran51"
                    android:icon="@drawable/ic_file"
                    android:title="(Sumber Daya Dapat Digambar, Gaya dan Tema" /> -->
                <item
                    android:id="@+id/pelajaran52"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul9" />
                <item
                    android:id="@+id/pelajaran53"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul10" />
            </menu>
        </item>
        <item android:title="@string/uji_aplikasi">
            <menu>
                <item
                    android:id="@+id/pelajaran61"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul11" />

            </menu>
        </item>
        <item android:title="@string/tugas_layar_belakang">
            <menu>
                <item
                    android:id="@+id/pelajaran71"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul12" />
                <!--   <item
                       android:id="@+id/pelajaran72"
                       android:icon="@drawable/ic_file"
                       android:title="Menghubungkan Ke Internet dengan AsyncTask dan AsyncTaskLoader" />
                   <item
                       android:id="@+id/pelajaran73"
                       android:icon="@drawable/ic_file"
                       android:title="Penerima Siaran" /> -->
            </menu>
        </item>
        <item android:title="@string/memicu_menjadwalkan_dan_mengoptimalkan_tugas_latar_belakang">
            <menu>
                <item
                    android:id="@+id/pelajaran81"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul13" />
                <!--    <item
                        android:id="@+id/pelajaran82"
                        android:icon="@drawable/ic_file"
                        android:title="Alarm Manager" />
                    <item
                        android:id="@+id/pelajaran83"
                        android:icon="@drawable/ic_file"
                        android:title="Job Scheduler" /> -->
            </menu>
        </item>
        <item android:title="@string/preferensi_dan_setelan">
            <menu>
                <item
                    android:id="@+id/pelajaran91"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul14" />
                <!--  <item
                      android:id="@+id/pelajaran92"
                      android:icon="@drawable/ic_file"
                      android:title="Menambahkan Setelan ke Aplikasi " /> -->
            </menu>
        </item>
        <!-- <item android:title="SQLite">
             <menu>
                 <item
                     android:id="@+id/pelajaran101"
                     android:icon="@drawable/ic_file"
                     android:title="Database SQLite" />
                 <item
                     android:id="@+id/pelajaran102"
                     android:icon="@drawable/ic_file"
                     android:title="Menelusuri Database SQLite" />
             </menu>
         </item> -->
        <item android:title="@string/berbagi_data">
            <menu>
                <!--    <item
                        android:id="@+id/pelajaran111"
                        android:icon="@drawable/ic_file"
                        android:title="Mengimplementasikan Penyedia Materi Minimalis" /> -->
                <item
                    android:id="@+id/pelajaran112"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul15" />
                <!-- <item
                     android:id="@+id/pelajaran113"
                     android:icon="@drawable/ic_file"
                     android:title="Berbagi Materi dengan Aplikasi Lain" /> -->
            </menu>
        </item>
        <!-- <item android:title="Data Loaader">
             <menu>
                 <item
                     android:id="@+id/pelajaran121"
                     android:icon="@drawable/ic_file"
                     android:title="Memuat dan Menampilkan Data Yang Daiambil" />

             </menu>
         </item> -->
        <item android:title="@string/sensor">
            <menu>
                <item
                    android:id="@+id/pelajaran131"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul16" />
                <item
                    android:id="@+id/pelajaran132"
                    android:icon="@drawable/ic_file"
                    android:title="@string/judul17" />

            </menu>
        </item>

        <!--   <menu>

                 <item
                     android:id="@+id/Lesson1"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/dashboard" />
                 <item
                     android:id="@+id/pelajaran1"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_1" />

                 <item
                     android:id="@+id/pelajaran2"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_2" />

                 <item
                     android:id="@+id/pelajaran3"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_3" />

                 <item
                     android:id="@+id/pelajaran4"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_4" />

                 <item
                     android:id="@+id/pelajaran5"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_5" />

                 <item
                     android:id="@+id/pelajaran6"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_6" />

                 <item
                     android:id="@+id/pelajaran7"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_7" />

                 <item
                     android:id="@+id/pelajaran8"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_8" />

                 <item
                     android:id="@+id/pelajaran9"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_9" />

                 <item
                     android:id="@+id/pelajaran10"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_10" />
                 <item
                     android:id="@+id/pelajaran11"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_11" />
                 <item
                     android:id="@+id/pelajaran12"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_12" />
                 <item
                     android:id="@+id/pelajaran13"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_13" />
                 <item
                     android:id="@+id/pelajaran14"
                     android:icon="@drawable/ic_menus"
                     android:title="@string/lesson_14" />

             </menu> -->

    </group>
    <item android:title="@string/about_as">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_about"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>