<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/phonenumberspinner_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProgramLain.PhoneNumberSpinner.PhoneNumberSpinner">

    <include
        android:id="@+id/toolbar"
        layout="@layout/nav_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phonenumber"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showText"
            android:text="@string/show_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_phonelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phonenumber_label" />

        <TextView
            android:id="@+id/text_phonelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing_entered" />
    </LinearLayout>

</LinearLayout>
