<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_utamanya"
    android:orientation="vertical"
    tools:context="alfianagramerry.mobpro.tugasbesar.androidtutorial.Root.AboutUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorCheck"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:id="@+id/gambar_alfian"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:src="@drawable/al"
                android:contentDescription="@string/alfian" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/alfian"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/githubnya"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/link_alfian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/user_alfian"
                    android:textColor="#000fff"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorCheck"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/gambar_agra"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:src="@drawable/ag"
                android:contentDescription="@string/agra" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/agra"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/githubnya"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/link_agra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/user_agra"
                    android:textColor="#000fff"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@color/colorCheck"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <ImageView
                android:id="@+id/gambar_merry"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:src="@drawable/mer"
                android:contentDescription="@string/merry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/merry"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/githubnya"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/link_merry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/user_merry"
                    android:textColor="#000fff"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorCheck"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@mipmap/logo"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/aam"
                android:layout_marginBottom="@dimen/hanya_aja"
                android:textSize="12sp" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>
